src/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');

* {
    font-family: 'Lato';
}

body {
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    margin: 0;
}

@media only screen and (max-device-width: 480px) {
    .show-mobile {
      display: flex;
      flex-direction: column;
      background-color: #1f2230;
      align-items: center;
      justify-content: center;
    }
    .hide-mobile {
      display: none;
    }
}

@media only screen and (min-device-width: 481px) {
    .show-mobile {
      display: none;
    }
    .hide-mobile {
      display: flex;
      width: 100vw;
        height: 18%;
        padding-left: 1.5em;
        padding-right: 1.5em;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        background-color: #1f2230;
    }
}
    

#title {
    color: white;
    font-size: 200%;
    font-weight: bold;
}

#searchContainer {
    display: flex;
    flex-direction: row;
    height: 25%;
    width: 20%;
    margin-right: 2em;
}

#searchBar {
    border: .1em;
   margin-right: 0;
}

#searchBtn {
    border: .2em;
    height: 100%;
    width: 35%;
    margin-left: 0;
    cursor: pointer;
    background-color: #ed8d55;
    color: white;
}

#searchBtn:hover {
    background-color: white;
    color: #ed8d55;
}

#searchIcon {
    width: 80%;
    height: 80%;
}

#mainContent {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-top: 6%;
}

#leftSide {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 30%;
    height: 40%;
    border: 2px solid #919191;
    border-radius: 2em;
    padding: 1em;
}

#upperContainer {
    width: 100%;
    height: 70%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-top: 5%;
    gap: 10%
}

#cityName {
   font-size: 1.75em;
   font-weight: bold;
}

#iconAndtemp {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#icon {
   font-size: 4em;
}

#temp {
    font-size: 3em;
}

#main {
    font-size: 1.5em;
    font-weight: bold;
}

#highAndLow {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 20%;
    justify-content: space-around;
    align-items: center;
}

#high {
    font-size: 1.5em;
}

#low {
    font-size: 1.5em;
}

#description {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 20%;
    font-size: 1.25em;;
}

.descInfo {
    font-size: 1.5em;
}

#rightSide {
    width: 30%;
    height: 30%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1.5em;
}

#footer {
    width: 100vw;
    height: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: .25em;
    background-color: #1f2230;
    color: white;
}

